--- a/scss/topic.scss
+++ b/scss/topic.scss
@@ -9,7 +9,7 @@
 		display: none !important;
 	}
 
-	[component="topic/reply"] {
+	[component="topic/reply"], [component="topic/reply/locked"], [component="topic/reply/guest"] {
 		font-size: 14px;
 		line-height: 20px;
 	}
